--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,11 @@ on:
   push:
     tags:
       - "*"
-
   workflow_dispatch:
+
+permissions:
+  contents: write
+  packages: write
 
 env:
   CARGO_TERM_COLOR: always
@@ -66,7 +69,7 @@ jobs:
       - name: Install OpenSSL
         if: matrix.os == 'macos-latest'
         run: brew install openssl@3
-      
+
       # Native build
       - name: Install target
         if: matrix.cross == false
@@ -99,10 +102,12 @@ jobs:
           version: v4.0.2
           files: target/${{ matrix.target }}/release/${{ matrix.exe }}
           args: -q --best --lzma
-      - uses: actions/upload-artifact@v2
+
+      - uses: actions/upload-artifact@v4
         with:
           name: forwarder-${{ matrix.target }}
           path: target/${{ matrix.target }}/release/${{ matrix.exe }}
+
       - name: Zip Release
         uses: TheDoctor0/zip-release@0.6.1
         with:
@@ -110,6 +115,7 @@ jobs:
           filename: forwarder-${{ matrix.target }}.zip
           directory: target/${{ matrix.target }}/release/
           path: ${{ matrix.exe }}
+
       - name: Publish
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -117,3 +123,4 @@ jobs:
           files: target/${{ matrix.target }}/release/forwarder-${{ matrix.target }}.zip
           generate_release_notes: true
           draft: true
+          token: ${{ secrets.GITHUB_TOKEN }}
